syntax = "proto3";

package neon_broker;

service NeonBroker {
    // Subscribe to safekeeper updates.
    rpc SubscribeSafekeeperInfo(SubscribeSafekeeperInfoRequest) returns (stream SafekeeperTimelineInfo) {};

    // Publish safekeeper updates.
    rpc PublishSafekeeperInfo(stream SafekeeperTimelineInfo) returns (Empty) {};
}

message SubscribeSafekeeperInfoRequest {

}

message SafekeeperTimelineInfo {
    uint64 last_log_term = 1;
    uint64 flush_lsn = 2;
    uint64 commit_lsn = 3;
    uint64 backup_lsn = 4;
    uint64 remote_consistent_lsn = 5;
    uint64 peer_horizon_lsn = 6;
    string safekeeper_connstr = 7;
}

message Empty {
}